--- a/app/src/main/res/drawable/backgroundstyle3.xml
+++ b/app/src/main/res/drawable/backgroundstyle3.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-<gradient android:startColor="#00008B"
-    android:endColor="#00008B"/>
+<gradient android:startColor="#4169E1"
+    android:centerColor="#4169E1"
+    android:endColor="#4169E1"/>
 </shape>
