--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -4,6 +4,7 @@
         <item>@font/alfa</item>
         <item>@font/alfa_slab_one</item>
         <item>@font/arbutus</item>
+        <item>@font/balsamiq_sans_bold</item>
         <item>@font/ubuntu_bold</item>
     </array>
 </resources>
