--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,11 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="CardViewStyle" parent="CardView">
+        <item name="android:startColor">#DEB887</item>
+        <item name="android:centerColor">#B0C4DE</item>
+        <item name="android:endColor">#87CEFA</item>
+    </style>
+
 </resources>
