--- a/app/src/main/res/layout/activity_giphy.xml
+++ b/app/src/main/res/layout/activity_giphy.xml
@@ -13,11 +13,13 @@
         android:id="@+id/recycler_item"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="105dp"
-        android:layout_marginRight="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/cardView"
-        tools:layout_editor_absoluteX="10dp" />
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/backgroundlayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
