--- a/app/src/main/res/layout/activity_search_actv.xml
+++ b/app/src/main/res/layout/activity_search_actv.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardBackgroundColor="#DEb999	"
-        app:cardCornerRadius="10dp"
+        app:cardCornerRadius="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -47,6 +47,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="75dp"
         android:layout_marginEnd="10dp"
+        android:background="@drawable/backgroundlayout"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
